added hover effect to options button in tasks container

--- a/src/app/[locale]/(authenticated)/lists/[slug]/components/task-container/task-container.module.scss
+++ b/src/app/[locale]/(authenticated)/lists/[slug]/components/task-container/task-container.module.scss
@@ -42,6 +42,13 @@
         align-items: center;
         gap: 20px;
       }
+
+      &__rightSide {
+        &:hover {
+          opacity: 0.7;
+          cursor: pointer;
+        }
+      }
     }
 
     &__tasksContainer {
