implemented generating invitation code

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -20,6 +20,7 @@ $red: #D82A38;
 $red-transparent: #d82a3850;
 $yellow: #FCBA77;
 $green: #5ECD90;
+$green-transparent: #5ECD9030;
 
 // FONT-SIZE
 $h2-font-size-large: 48px;
