--- a/src/components/list-item/list-item.module.scss
+++ b/src/components/list-item/list-item.module.scss
@@ -17,11 +17,12 @@
       box-sizing: border-box;
       width: 100%;
       height: 100%;
-    }
 
-    >svg {
-      position: absolute;
-      z-index: -1;
+      >svg {
+        width: 100px;
+        height: 100px;
+        z-index: -1;
+      }
     }
 
     p {
@@ -53,9 +54,11 @@
     @include breakpoint.media('<=desktop') {
       height: 150px;
 
-      >svg {
-        width: 80px;
-        height: 80px;
+      a {
+        >svg {
+          width: 80px;
+          height: 80px;
+        }
       }
 
       p {
@@ -67,9 +70,11 @@
       height: 150px;
       min-width: 150px;
 
-      >svg {
-        width: 50px;
-        height: 50px;
+      a {
+        >svg {
+          width: 50px;
+          height: 50px;
+        }
       }
     }
 
@@ -77,13 +82,21 @@
       min-width: 100px;
       height: 100px;
 
-      >svg {
-        width: 50px;
-        height: 50px;
+      a {
+        >svg {
+          width: 50px;
+          height: 50px;
+        }
       }
 
       p {
         font-size: $p-font-size-x-small;
+      }
+
+      &__taskAmount {
+        padding: 2px 10px;
+        font-size: 15px;
+        gap: 5px;
       }
     }
 
@@ -104,6 +117,11 @@
       height: 100%;
       flex: 1;
       align-items: center;
+
+      >svg {
+        height: 40px;
+        width: 40px;
+      }
     }
 
     p {
