--- a/src/app/[locale]/globals.scss
+++ b/src/app/[locale]/globals.scss
@@ -39,12 +39,19 @@
 }
 
 // Apply the theme
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   font-family: var(--font-family);
   color: var(--text);
   background-color: var(--background);
-  margin: 0;
-  overflow-y: hidden;
 
   h2 {
     font-size: var(--h2-font-size-large);
