--- a/src/components/navbar/navbar.module.scss
+++ b/src/components/navbar/navbar.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 90%;
+    height: 90vh;
     padding: 40px 0;
     justify-content: space-between;
 
