--- a/src/components/list-manager/list-details/list-details.module.scss
+++ b/src/components/list-manager/list-details/list-details.module.scss
@@ -1,118 +1,77 @@
 @use '../../../styles/breakpoints' as breakpoint;
 @use '../../../styles/variables' as *;
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+.iconsContainer {
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  gap: 40px;
   justify-content: center;
-  z-index: 10;
+  align-items: center;
+  flex-wrap: wrap;
 
-
-  &__addNewList {
-    background-color: var(--secondary);
-    padding: 40px;
+  &__icon {
     border-radius: 10px;
-    min-width: 260px;
+    padding: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 3px solid;
+    border-color: transparent;
 
-    &__upperContainer {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
-
-      &__placeholder {
-        width: 32px;
-      }
-
-      svg {
-        &:hover {
-          cursor: pointer;
-          opacity: 0.7;
-        }
-      }
+    &.active {
+      border-color: var(--tertiary);
     }
 
-    &__iconsContainer {
-      display: flex;
-      flex-direction: row;
-      gap: 40px;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
+    }
+  }
+}
 
-      &__icon {
-        border-radius: 10px;
-        padding: 2px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border: 3px solid;
-        border-color: transparent;
+.colorsContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+  margin-bottom: 40px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 
-        &.active {
-          border-color: var(--tertiary);
-        }
+  &__color {
+    width: 44px;
+    height: 44px;
+    border-radius: 10px;
+    border: 3px solid;
+    border-color: transparent;
 
-        &:hover {
-          cursor: pointer;
-          opacity: 0.7;
-        }
-      }
+    &.active {
+      border-color: var(--tertiary);
     }
 
-    &__colorsContainer {
-      display: flex;
-      flex-direction: row;
-      gap: 40px;
-      margin-bottom: 40px;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
+    &:hover {
+      cursor: pointer;
+      opacity: 0.7;
+    }
+  }
+}
 
-      &__color {
-        width: 44px;
-        height: 44px;
-        border-radius: 10px;
-        border: 3px solid;
-        border-color: transparent;
-
-        &.active {
-          border-color: var(--tertiary);
-        }
-
-        &:hover {
-          cursor: pointer;
-          opacity: 0.7;
-        }
-      }
+@include breakpoint.media('<=LGphone') {
+  .iconsContainer {
+    &__icon {
+      border-radius: 10px;
+      padding: 2px;
+      border: 2px solid;
+      border-color: transparent;
+      width: 25px;
+      height: 25px;
     }
   }
 
-  @include breakpoint.media('<=LGphone') {
-    &__addNewList {
-      &__iconsContainer {
-        &__icon {
-          border-radius: 10px;
-          padding: 2px;
-          border: 2px solid;
-          border-color: transparent;
-          width: 25px;
-          height: 25px;
-        }
-      }
-
-      &__colorsContainer {
-        &__color {
-          width: 25px;
-          height: 25px;
-        }
-      }
+  .colorsContainer {
+    &__color {
+      width: 25px;
+      height: 25px;
     }
   }
 }
