--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -35,5 +35,5 @@ $p-font-size-large: 20px;
 $p-font-size-medium: 18px;
 $p-font-size-small: 16px;
 $p-font-size-x-small: 14px;
-
+$p-font-size-xl-small: 12px;
 $font-family: 'Poppins' sanserif;
